Mean view animation

--- a/src/surveyinterface/templates/surveyinterface/survey.html
+++ b/src/surveyinterface/templates/surveyinterface/survey.html
@@ -30,7 +30,7 @@
                   <div class="panel">
                     <div class="btn-group">
                         <button id="map-view" title="Heat Map View" type="button" class="btn btn-default" aria-label="Center Align"><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span></button>
-                        <button id="mean-view" title="Mean View" type="button" class="btn btn-default" aria-label="Center Align"><span class="glyphicon glyphicon-stats" aria-hidden="true"></span></button>
+                        <button id="mean-view" title="Mean Result View" type="button" class="btn btn-default" aria-label="Center Align"><span class="glyphicon glyphicon-stats" aria-hidden="true"></span></button>
                         <button id="percentage-view" title="Percentage View" type="button" class="btn btn-default" aria-label="Center Align"><span class="glyphicon glyphicon-th-large" aria-hidden="true"></span></button>
                     </div>
                   </div>
