--- a/src/surveyinterface/templates/surveyinterface/survey.html
+++ b/src/surveyinterface/templates/surveyinterface/survey.html
@@ -37,7 +37,7 @@
                 </div>
             </div>
             <div class="dropdown">
-              <button id="btnCategories" class="btn dropdown-toggle" type="button" data-toggle="dropdown">
+              <button title="Demogaphic variables" id="btnCategories" class="btn dropdown-toggle" type="button" data-toggle="dropdown">
                   <span class="glyphicon glyphicon-list" aria-hidden="true"></span>
               </button>
               <ul id="lstYAxisMode" class="dropdown-menu">
