--- a/src/surveyinterface/templates/surveyinterface/home.html
+++ b/src/surveyinterface/templates/surveyinterface/home.html
@@ -16,7 +16,7 @@
             <div class="caption">
                 <h4>{{ survey.name }}</h4>
                 <p>{{ survey.dateconducted }}</p>
-                <p><a href="{% url 'survey-view' survey.code %}" class="btn btn-default" role="button">View</a></p>
+                <p><a href="{% url 'survey-view' survey.code %}" class="btn btn-primary" role="button">View</a></p>
             </div>
         </div>
     {% empty %}
