Buf fixes. Added total count labels Added colors to non-bidirectional questions

--- a/src/surveyinterface/templates/surveyinterface/survey.html
+++ b/src/surveyinterface/templates/surveyinterface/survey.html
@@ -38,7 +38,7 @@
             </div>
             <div class="dropdown">
               <button title="Demogaphic variables" id="btnCategories" class="btn dropdown-toggle" type="button" data-toggle="dropdown">
-                  <span class="glyphicon glyphicon-list" aria-hidden="true"></span>
+                  <span class="glyphicon glyphicon-list" aria-hidden="true"> ▼</span>
               </button>
               <ul id="lstYAxisMode" class="dropdown-menu">
                 <li ><a data-axis="All" href="#">All</a></li>
