--- a/src/surveyinterface/static/css/style.css
+++ b/src/surveyinterface/static/css/style.css
@@ -184,8 +184,6 @@ text.shadow {
 
 #top-bar .btn-group {
     margin: 5px;
-    float: right;
-    right: 0;
 }
 
 #top-bar {
@@ -209,7 +207,7 @@ text.shadow {
 }
 
 #captionContainer {
-    width: calc(100% - 146px);
+    width: calc(100% - 163px);
     float: left;
     margin-bottom: 0;
     margin-left: 6px;
@@ -225,10 +223,15 @@ text.shadow {
     border-color: #333 !important;
     -webkit-box-shadow: inset 0 3px 5px rgba(0, 0, 0, .2);
     box-shadow: inset 0 3px 5px rgba(0, 0, 0, .2);
+
+}
+
+.btn[disabled]{
+    cursor:not-allowed; /* Confirmed broken for current version of bootstrap https://github.com/twbs/bootstrap/issues/16088 */
 }
 
 #viewContainer {
-    width: 133px;
+    width: 150px;
     height: 90px;
     float: right;
     margin-bottom: 0;
@@ -351,9 +354,6 @@ hr {
     border-right: 1px solid #aaa;
 }
 
-#CollisionToggleContainer {
-    display: inline;
-}
 
 .node text {
     -webkit-touch-callout: none;
@@ -526,5 +526,6 @@ path[data-zip] {
 
 .zip-path:hover{
     opacity:0.5;
+    cursor:move;
 }
 
