--- a/src/surveyinterface/static/css/style.css
+++ b/src/surveyinterface/static/css/style.css
@@ -526,6 +526,18 @@ path[data-zip] {
 
 .zip-path:hover{
     opacity:0.5;
-    cursor:move;
 }
 
+.noselect {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+#zoom_in:hover, #zoom_out:hover{
+    fill: #EEE;
+    cursor:pointer;
+}
