--- a/src/surveyinterface/templates/surveyinterface/home.html
+++ b/src/surveyinterface/templates/surveyinterface/home.html
@@ -12,7 +12,7 @@
 
     {% for survey in object_list %}
         <div class="thumbnail">
-            <img src="{% static 'images/docicon.jpg' %}" alt="...">
+            <img src="{% static 'images/survey-icon.png' %}" alt="...">
             <div class="caption">
                 <h4>{{ survey.name }}</h4>
                 <p>{{ survey.dateconducted }}</p>
