Implemented significance flag. I'm on fire.

--- a/src/surveyinterface/templates/surveyinterface/survey.html
+++ b/src/surveyinterface/templates/surveyinterface/survey.html
@@ -49,6 +49,7 @@
                 <!--<li><a data-axis="Site" href="#">Survey Site</a></li>-->
               </ul>
             </div>
+            <div id="significance-flag-container" title=""><span class="glyphicon glyphicon-flag"></span></div>
             <div id="map-canvas"></div>
         </div>
     </div>
