Minor bug fix Significance flag help text

--- a/src/surveyinterface/static/css/style.css
+++ b/src/surveyinterface/static/css/style.css
@@ -521,3 +521,12 @@ path[data-zip] {
     right: 60px;
     width: 200px;
 }
+
+.flag-text:hover{
+    text-decoration:underline;
+    cursor:pointer;
+}
+
+#btnHelp {
+    display:none;
+}
