--- a/src/surveyinterface/templates/surveyinterface/survey.html
+++ b/src/surveyinterface/templates/surveyinterface/survey.html
@@ -7,9 +7,7 @@
 {#    </div>#}
 
         <!-- Button trigger modal -->
-{#    <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">#}
-{#      Launch demo modal#}
-{#    </button>#}
+    <button id="btnHelp" type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal"></button>
 
     <!-- Modal -->
     <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
@@ -18,14 +16,17 @@
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
                             aria-hidden="true">&times;</span></button>
-                    <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+                    <h4 class="modal-title" id="myModalLabel">About significance flag</h4>
                 </div>
                 <div class="modal-body">
-                    ...
+                    <p>This flag indicates whether the differences in the results in this matrix are statistically
+                        significant according to a chi-square test. The distribution of observed frequencies is compared
+                        to expected frequencies from a distribution where there is no relationship between the two axes.
+                        If the total difference is greater than the chi-square statistic for the 95% confidence level,
+                        than the results are considered statistically significant.</p>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Save changes</button>
+                    <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
                 </div>
             </div>
         </div>
