--- a/src/surveyinterface/static/css/style.css
+++ b/src/surveyinterface/static/css/style.css
@@ -209,18 +209,6 @@ text.shadow {
     /* border-top-right-radius: 4px; */
 }
 
-.btn-default.disabled {
-    color: #FFF;
-    background-color: #3D4348 !important;
-    border-color: #333 !important;
-    -webkit-box-shadow: inset 0 3px 5px rgba(0, 0, 0, .2);
-    box-shadow: inset 0 3px 5px rgba(0, 0, 0, .2);
-
-}
-
-.btn[disabled] {
-    cursor: not-allowed; /* Confirmed broken for current version of bootstrap https://github.com/twbs/bootstrap/issues/16088 */
-}
 
 #viewContainer {
     width: 150px;
@@ -246,6 +234,28 @@ text.shadow {
     border-top-left-radius: 0px;
 }
 
+#viewContainer button {
+    background-image: -webkit-linear-gradient(top, #f4f5f5, #dfdddd);
+    border: 1px solid rgb(108, 96, 96);
+    opacity:1;
+}
+
+#viewContainer .btn-default.disabled {
+    color: #FFF;
+    border: 1px solid rgb(108, 96, 96) !important;
+    background-color: #5F5F5F !important;
+    -webkit-box-shadow: inset 0 3px 5px rgba(0, 0, 0, .2);
+    box-shadow: inset 0 3px 5px rgba(0, 0, 0, .2);
+    background-image:none;
+    opacity:1;
+}
+
+#viewContainer .btn[disabled], #btnCategories[disabled]{
+    cursor: not-allowed; /* Confirmed broken for current version of bootstrap https://github.com/twbs/bootstrap/issues/16088 */
+    color:#AAA;
+}
+
+
 .caption p {
     clear: left;
 }
@@ -256,7 +266,8 @@ text.shadow {
     border-radius: 1px;
     color: #000;
     background: #FFF;
-    border: 1px solid #BBB;
+    background-image: -webkit-linear-gradient(top, #f4f5f5, #dfdddd);
+    border: 1px solid rgb(108, 96, 96);
 }
 
 #btnCategories:hover {
