--- a/src/surveyinterface/static/css/style.css
+++ b/src/surveyinterface/static/css/style.css
@@ -238,6 +238,7 @@ text.shadow {
     background-image: -webkit-linear-gradient(top, #f4f5f5, #dfdddd);
     border: 1px solid rgb(108, 96, 96);
     opacity:1;
+    text-shadow: 0 1px 0 #fff;
 }
 
 #viewContainer .btn-default.disabled {
@@ -247,12 +248,14 @@ text.shadow {
     -webkit-box-shadow: inset 0 3px 5px rgba(0, 0, 0, .2);
     box-shadow: inset 0 3px 5px rgba(0, 0, 0, .2);
     background-image:none;
+    text-shadow: 0 1px 0 #000;
     opacity:1;
 }
 
 #viewContainer .btn[disabled], #btnCategories[disabled]{
     cursor: not-allowed; /* Confirmed broken for current version of bootstrap https://github.com/twbs/bootstrap/issues/16088 */
     color:#AAA;
+    text-shadow: 0 1px 0 #fff;
 }
 
 
@@ -476,7 +479,7 @@ li .checkbox {
 
 .intro-divider {
     width: 100%;
-    margin-top: 80px;
+    margin-top: 60px;
     border-top: 1px solid #f8f8f8;
     border-bottom: 1px solid rgba(0, 0, 0, 0.2);
 }
@@ -540,4 +543,25 @@ path[data-zip] {
 
 #btnHelp {
     display:none;
+}
+
+.modal-content {
+    border-radius: 0;
+    padding: 4px;
+}
+
+.modal-header {
+  padding: 10px;
+  border-bottom: 0;
+  min-height: 16.42857143px;
+  background: #054176;
+  margin: -3px;
+  color: #FFF;
+}
+
+.modal-footer {
+    margin-top: 15px;
+    padding: 0px 20px 20px;
+    text-align: right;
+    border-top:0;
 }
