--- a/src/surveyinterface/templates/surveyinterface/survey.html
+++ b/src/surveyinterface/templates/surveyinterface/survey.html
@@ -47,7 +47,7 @@
             <div id="top-bar">
                 <div id="captionContainer" class="panel panel-primary">
                   <div class="panel-heading">
-                    <h3 id="txtTitle" class="panel-title"></h3>
+                    <span id="txtTitle" class="panel-title">Welcome!</span>
                   </div>
                   <div id="txtDescription" class="panel-body">
                     Select a question to get started
