--- a/src/surveyinterface/static/css/style.css
+++ b/src/surveyinterface/static/css/style.css
@@ -1,11 +1,12 @@
 ﻿html, body {
     width: 100%;
     height: 100%;
-    overflow-y: hidden;
+    /*overflow-y: hidden;*/
     /*overflow-x: hidden;*/
     margin: 0;
     padding: 0;
     min-width: 1000px;
+    min-height: 900px;
 }
 
 body,
@@ -24,12 +25,7 @@ h6 {
     width: calc(100% - 300px);
     float: right;
     overflow: hidden;
-      padding: 4px;
-}
-
-#visualizationContent .dropdown {
-    margin-top: 5px;
-    margin-left: 6px
+    padding: 4px;
 }
 
 .thumbnail {
@@ -39,6 +35,7 @@ h6 {
     border: 1px solid #ddd;
     border-radius: 0;
     background-color: #FFF;
+    z-index: -1;
 }
 
 #surveyContainer .thumbnail {
@@ -88,13 +85,9 @@ h6 {
     margin-bottom: 0;
 }
 
-.dropdown {
-    text-align: left;
-    position: absolute;
-}
-
 .dropdown-menu {
     margin-top: 10px;
+    text-align: left;
 }
 
 .dropdown-menu li:not(.divider) a:hover {
@@ -107,7 +100,6 @@ h6 {
 
 #surveyContainer {
     width: 1000px;
-    height: calc(100% - 71px);
     margin: auto;
     margin-top: 71px;
 }
@@ -120,7 +112,6 @@ svg {
 #mainContent {
     height: calc(100% - 70px);
     overflow: auto;
-    margin-top: 70px;
 }
 
 #listQuestions {
@@ -190,9 +181,10 @@ text.shadow {
 #map-canvas {
     height: calc(100% - 172px);
     width: calc(100% - 320px);
-    margin: 0px 10px;
+    margin: 0 10px;
     border: 1px solid #666;
     position: absolute;
+    z-index: -1;
     display: none;
 }
 
@@ -201,36 +193,29 @@ text.shadow {
 }
 
 #captionContainer {
-      width: calc(100% - 153px);
+    width: calc(100% - 153px);
     float: left;
     margin-bottom: 0;
-    border-radius: 0px;
-    border-color: #8A7878;
-    /* border-top-left-radius: 4px; */
-    /* border-top-right-radius: 4px; */
+    border-radius: 0;
+    border-color: #000;
 }
 
 #viewContainer {
     width: 150px;
     height: 90px;
     float: right;
+    border-color: #000;
     margin-bottom: 0;
-    -webkit-border-radius: 0px;
-    -webkit-border-top-left-radius: 4px;
-    -webkit-border-top-right-radius: 4px;
-    -moz-border-radius: 0px;
-    -moz-border-radius-topleft: 4px;
-    -moz-border-radius-topright: 4px;
-    border-radius: 0px;
-    border-color: #8A7878;
+    border-radius: 0;
 }
 
 #captionContainer .panel-heading, #viewContainer .panel-heading {
     height: 38px;
-    border-top-right-radius: 0px;
-    border-top-left-radius: 0px;
+    border-top-right-radius: 0;
+    border-top-left-radius: 0;
     text-shadow: 0 1px 0 #0A0A0A;
-    background-color: #3D4247;
+    background: #42484E;
+    box-shadow: inset 0 1px 0 rgba(255, 255, 255, .1);
     border-color: #000;
 }
 
@@ -270,6 +255,10 @@ text.shadow {
     background: #FFF;
     background-image: -webkit-linear-gradient(top, #f4f5f5, #dfdddd);
     border: 1px solid rgb(108, 96, 96);
+    text-align: left;
+    position: absolute;
+    left: 7px;
+    top: 5px;
 }
 
 #btnCategories span {
@@ -337,7 +326,7 @@ hr {
 
 #listQuestions li:not(.indented) {
     border: 1px solid #aaa;
-    border-top: 0px;
+    border-top: 0;
 }
 
 #listQuestions li:hover {
@@ -360,6 +349,7 @@ hr {
 
 .tooltip {
     position: absolute;
+    z-index: -1;
     top: 100px;
     left: 100px;
     -moz-border-radius: 5px;
@@ -406,11 +396,16 @@ li .checkbox {
 }
 
 .navbar-nav.navbar-right:last-child {
-    margin-right: 0px;
+    margin-right: 0;
 }
 
 .navbar-brand img {
     max-height: 68px;
+}
+
+.navbar-collapse.in {
+    background: #42484E;
+    border: 1px solid black;
 }
 
 .navbar > .container {
@@ -419,17 +414,18 @@ li .checkbox {
 
 .navbar .container {
     position: absolute;
-    width: 100%;
+    width: 90%;
 }
 
 .navbar-brand {
     color: #c8c8c8;
     float: left;
-    padding: 0px 15px;
+    padding: 0 15px;
 }
 
 .navbar {
-    margin-bottom: 0px;
+    border-radius: 0;
+    margin-bottom: 0;
     height: 70px;
     background-image: -webkit-linear-gradient(#484e55, #3a3f44 60%, #313539);
     background-image: -o-linear-gradient(#484e55, #3a3f44 60%, #313539);
@@ -557,8 +553,7 @@ path[data-zip] {
 
 .modal-footer {
     margin-top: 15px;
-    padding: 0px 20px 20px;
+    padding: 0 20px 20px;
     text-align: right;
     border-top: 0;
-
 }
