--- a/src/surveyinterface/static/css/style.css
+++ b/src/surveyinterface/static/css/style.css
@@ -1,8 +1,6 @@
 ﻿html, body {
     width: 100%;
     height: 100%;
-    /*overflow-y: hidden;*/
-    /*overflow-x: hidden;*/
     margin: 0;
     padding: 0;
     min-width: 1000px;
@@ -29,32 +27,16 @@ h6 {
 }
 
 .thumbnail {
-    width: 282px;
+    width: 200px;
     float: left;
     position: absolute;
     border: 1px solid #ddd;
-    border-radius: 0;
     background-color: #FFF;
-    z-index: -1;
-}
-
-#surveyContainer .thumbnail {
     text-align: center;
-    width: 200px;
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
     border-radius: 4px;
-    padding-top: 10px;
-    box-shadow: 3px 3px 6px #D0D0D0;
-    border: 1px solid rgb(163, 163, 163);
-}
-
-#surveyContainer .thumbnail h4 {
-    background: rgb(100, 100, 100);
-    color: white;
-    margin-left: -10px;
-    margin-right: -10px;
-    border: 1px solid rgb(92, 92, 92);
+    padding: 10px;
 }
 
 #txtDescription {
@@ -73,16 +55,23 @@ h6 {
     width: 150px;
 }
 
-#listQuestions .thumbnail img {
+#surveyInfo img {
+    padding: 4px;
     float: left;
     display: inline;
+    width: 40px;
 }
 
-#listQuestions .thumbnail h4, #listQuestions .thumbnail p {
-    display: inline;
+#surveyInfo {
+    width: 100%;
+    border: 1px solid rgb(163, 163, 163);
     float: left;
-    width: auto;
-    margin-bottom: 0;
+}
+
+.panel-left {
+    width: 300px;
+    float: left;
+    height: calc(100% - 52px);
 }
 
 .dropdown-menu {
@@ -115,7 +104,7 @@ svg {
 }
 
 #listQuestions {
-    width: 300px;
+    width: 100%;
     height: 100%;
     overflow-y: scroll;
     overflow-x: hidden;
@@ -313,7 +302,7 @@ hr {
 }
 
 .panel-collapse li {
-    border-bottom: 1px solid #aaa;
+    border-bottom: 1px solid #838383;
 }
 
 .even {
