--- a/src/surveyinterface/templates/surveyinterface/survey.html
+++ b/src/surveyinterface/templates/surveyinterface/survey.html
@@ -41,8 +41,8 @@
         <!-- Modal -->
     <div class="modal fade" id="guideModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
         <div id="arrowWindow" class="arrow_box arrow_right">
-            <center><b><span id="tip-title">Welcome</span></b></center>
-            <center><span id="tip">This is some helpful text indeed</span></center>
+            <center><b><span id="tip-title"></span></b></center>
+            <center><span id="tip"></span></center>
         </div>
         <div class="no-click-layer"></div>
         <div>
