--- a/src/surveyinterface/templates/surveyinterface/survey.html
+++ b/src/surveyinterface/templates/surveyinterface/survey.html
@@ -8,6 +8,7 @@
 
     <div id="loadingScreen">
         <h3>Loading...</h3>
+{#        <img src="{% static 'images/preloader.gif' %}" alt="Loading Icon">#}
     </div>
 
     <!-- Button trigger modal -->
