--- a/src/surveyinterface/templates/surveyinterface/home.html
+++ b/src/surveyinterface/templates/surveyinterface/home.html
@@ -18,7 +18,7 @@
                 <p>{{ survey.description }}</p>
                 <p><a href="{% url 'survey-view' survey.code %}" class="btn btn-primary" role="button">View Data</a></p>
                 <p><a href="{% static survey.pdf.url %}" class="btn btn-primary" role="button">Open PDF</a></p>
-{#                <p><a href="{% url 'survey-info' survey.code %}" class="btn btn-primary" role="button">About Survey</a></p>#}
+                <p><a href="{% url 'survey-info' survey.code %}" class="btn btn-primary" role="button">About Survey</a></p>
             </div>
         </div>
     {% empty %}
